sfdx-spa-alcala/force-app/main/default/objects/College_Enrollment_Records__c/College_Enrollment_Records__c.object-meta.xml
<CustomObject>
    <description>This object is used to capture student college enrollment details.</description>
    <label>College Enrollment Record</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>College Enrollment Records Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>College Enrollment Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>