sfdx-spa-alcala/force-app/main/default/objects/College_Enrollment_Records__c/fields/Class_Level__c.field-meta.xml
<CustomField>
    <fullName>Class_Level__c</fullName>
    <description>If available, the Class level associated with the student as provided by the reporting college.</description>
    <inlineHelpText>If available, the Class level associated with the student as provided by the reporting college.</inlineHelpText>
    <label>Class Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F = Freshman (Undergraduate)</fullName>
            </value>
            <value>
                <fullName>S = Sophomore (Undergraduate)</fullName>
            </value>
            <value>
                <fullName>J = Junior (Undergraduate)</fullName>
            </value>
            <value>
                <fullName>R = Senior (Undergraduate)</fullName>
            </value>
            <value>
                <fullName>C = Certificate (Undergraduate)</fullName>
            </value>
            <value>
                <fullName>N = Unspecified (Undergraduate)</fullName>
            </value>
            <value>
                <fullName>B = Bachelor&#39;s (Undergraduate)</fullName>
            </value>
            <value>
                <fullName>M = Master’s (Graduate)</fullName>
            </value>
            <value>
                <fullName>D = Doctoral (Graduate)</fullName>
            </value>
            <value>
                <fullName>P = Postdoctorate (Graduate)</fullName>
            </value>
            <value>
                <fullName>L = First Professional (Graduate)</fullName>
            </value>
            <value>
                <fullName>G = Unspecified (Graduate/Professional)</fullName>
            </value>
            <value>
                <fullName>A = Associate&#39;s</fullName>
            </value>
            <value>
                <fullName>T = Post Baccalaureate Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>