sfdx-spa-alcala/force-app/main/default/objects/College_Enrollment_Records__c/fields/College_CodeBranch__c.field-meta.xml
<CustomField>
    <fullName>College_CodeBranch__c</fullName>
    <description>OPE/FICE code of the college that the student attended.</description>
    <inlineHelpText>OPE/FICE code of the college that the student attended.</inlineHelpText>
    <label>College Code/Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>