sfdx-spa-alcala/force-app/main/default/objects/College_Enrollment_Records__c/fields/College_University_Name__c.field-meta.xml
<CustomField>
    <fullName>College_University_Name__c</fullName>
    <label>College/University Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>College Enrollment Records</relationshipLabel>
    <relationshipName>College_Enrollment_Records</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>