sfdx-spa-alcala/force-app/main/default/objects/College_Enrollment_Records__c/fields/Enrollment_Begin__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Begin__c</fullName>
    <description>Begin date for the student’s period of attendance</description>
    <inlineHelpText>Begin date for the student’s period of attendance</inlineHelpText>
    <label>Enrollment Begin</label>
    <type>Date</type>
</CustomField>