sfdx-spa-alcala/force-app/main/default/objects/College_Enrollment_Records__c/fields/Enrollment_End__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_End__c</fullName>
    <description>End date for the student’s period of attendance.</description>
    <inlineHelpText>End date for the student’s period of attendance.</inlineHelpText>
    <label>Enrollment End</label>
    <type>Date</type>
</CustomField>