sfdx-spa-alcala/force-app/main/default/objects/College_Enrollment_Records__c/fields/Enrollment_Major2__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Major2__c</fullName>
    <description>If available, the major associated with the student’s enrollment record as provided by the reporting college</description>
    <inlineHelpText>If available, the major associated with the student’s enrollment record as provided by the reporting college</inlineHelpText>
    <label>Enrollment Major 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>