sfdx-spa-alcala/force-app/main/default/objects/College_Enrollment_Records__c/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <description>The last enrollment status reported for the student:. This field will be blank if the reporting college has not defined the student’s enrollment status as directory information.</description>
    <inlineHelpText>The last enrollment status reported for the student:. This field will be blank if the reporting college has not defined the student’s enrollment status as directory information.</inlineHelpText>
    <label>Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F = Full‐time</fullName>
            </value>
            <value>
                <fullName>H = Half‐time</fullName>
            </value>
            <value>
                <fullName>L = Less than half‐time</fullName>
            </value>
            <value>
                <fullName>Q = Three‐quarter time</fullName>
            </value>
            <value>
                <fullName>A = Leave of absence</fullName>
            </value>
            <value>
                <fullName>W = Withdrawn</fullName>
            </value>
            <value>
                <fullName>D = Deceased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>