sfdx-spa-alcala/force-app/main/default/objects/College_Enrollment_Records__c/fields/Record_Found_YN__c.field-meta.xml
<CustomField>
    <fullName>Record_Found_YN__c</fullName>
    <description>Y = Detail report contains student’s college record
N = Detail report does NOT contain student’s college record</description>
    <inlineHelpText>Y = Detail report contains student’s college record
N = Detail report does NOT contain student’s college record</inlineHelpText>
    <label>Record Found Y/N</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>