sfdx-spa-alcala/force-app/main/default/objects/College_Enrollment_Records__c/fields/Search_Date__c.field-meta.xml
<CustomField>
    <fullName>Search_Date__c</fullName>
    <description>Search date that you provided in your request file.</description>
    <inlineHelpText>Search date that you provided in your request file.</inlineHelpText>
    <label>Search Date</label>
    <type>Date</type>
</CustomField>