sfdx-spa-alcala/force-app/main/default/objects/College_Enrollment_Records__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <label>Student Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>College Enrollment Records</relationshipLabel>
    <relationshipName>College_Enrollment_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>